# Learning-Focus

./: .gitignore  CMakeLists.txt  CMakePresets.json  LF.cpp  LF.rc  LF.sln  LF.vcxproj  LF.vcxproj.filters  README.md  README.zh-CN.md  archdetect.cmake  learning_focus.py  learning_focus.spec  requirements.txt  vcpkg.json  version.hpp
.github/ISSUE_TEMPLATE/: BugReport.md  BugReport.yml  BugReport.zh-CN.yml
.github/workflows/: build.yml  clangformat.yml  codeql.yml  gitmsg.yml
ImageNet/: classify.py  resize.py  resize_enhance.py  tag.py
modules/: apis.hpp  basic.hpp  file-process.hpp  functions.hpp  init.hpp
scripts/: build.ps1
wiki/: Brief.md  Build.md  Contact.md  Contribution.md  FAQ.md  Home.md  Installation.md  Scripts.md  Use.md  _Sidebar.md
